GNOME Bugzilla – Bug 740765
lua-factory: Fix use-after-free
Last modified: 2014-11-27 00:05:47 UTC
.
Created attachment 291570 [details] [review] lua-factory: Fix use-after-free When the key type isn't handled, we try to print the key name. Better for it not to be freed when we do that.
Review of attachment 291570 [details] [review]: You still need to g_free the key_name after the GRL_DEBUG (before the continue)... or you could use the lua_tostring (L, -1) to get the key_name in the top of the stack.
Created attachment 291601 [details] [review] lua-factory: Fix use-after-free When the key type isn't handled, we try to print the key name. Better for it not to be freed when we do that.
Review of attachment 291601 [details] [review]: looks fine
Review of attachment 291601 [details] [review]: pushed